Send Redirect to Relative URL

--- a/dev/com.ibm.ws.webcontainer/resources/OSGI-INF/l10n/metatype.properties
+++ b/dev/com.ibm.ws.webcontainer/resources/OSGI-INF/l10n/metatype.properties
@@ -174,3 +174,6 @@ getRealPathReturnsQualifiedPath.desc=Return non-null paths from the ServletConte
 
 stopAppStartUponListenerException.name=Stop application for unhandled listener exception
 stopAppStartUponListenerException.desc=Some web applications depend on context listeners for setup before the web application starts. When this property is set to true, the application stops starting up when an unhandled exception is thrown from the context listeners. For servlet-5.0 and newer Servlet features, the default value is true. 
+
+redirectToRelativeUrl.name=Send redirect response to a relative URL location
+redirectToRelativeUrl.desc=Send redirect response to a relative URL location without processing it. Set this property to true to send redirect response without converting the URL to an absolute location. 
