make loginProperty public

--- a/dev/com.ibm.ws.security.wim.adapter.ldap/resources/OSGI-INF/l10n/metatype.properties
+++ b/dev/com.ibm.ws.security.wim.adapter.ldap/resources/OSGI-INF/l10n/metatype.properties
@@ -78,6 +78,10 @@ sslRef=SSL reference
 sslRef$Ref=SSL reference
 sslRef.desc=ID of the SSL configuration to be used to connect to the SSL-enabled LDAP server.
 
+ldap.loginProperty=Login Property
+loginProperty=Login property
+loginProperty.desc=A WIM PersonAccount property that is used to generate the LDAP filter for user searches. The first instance of this attribute is returned as the principal name for the user. The mapping of WIM properties to LDAP attributes can be modified by using the attributeConfiguration attribute. Setting this attribute will override userFilter if it is defined. This attribute is case-sensitive.
+
 #==== Unhide some properties  =====
 
 # Note to translators: DO NOT TRANSLATE the capitalized words "Person," "Group," or "Organizational Unit"
