Rename security features and API bundles
- Update jaspic-2.0 and jacc-2.0 to be authentication-2.0 and
authorization-2.0 respectively
- Add WLP-AlsoKnownAs to mail-2.0

--- a/dev/com.ibm.websphere.appserver.features/visibility/public/appAuthorization-2.0/resources/l10n/io.openliberty.appAuthorization-2.0_fr.properties
+++ b/dev/com.ibm.websphere.appserver.features/visibility/public/appAuthorization-2.0/resources/l10n/io.openliberty.appAuthorization-2.0_fr.properties
@@ -14,4 +14,5 @@
 #NLS_MESSAGEFORMAT_NONE
 #
 
-description=Esta caracter\u00edstica habilita el soporte para Jakarta Authorization Contract for Containers (JACC) versi\u00f3n 2.0. Con el fin de a\u00f1adir la caracter\u00edstica jacc-2.0 al servidor, debe a\u00f1adir el proveedor JACC de terceros que no forma parte del perfil de Open Liberty.
+description=Cette fonction active la prise en charge de Jakarta Authorization Contract for Containers (JACC) version 2.0. Afin \
+d'ajouter la fonction appAuthorization-2.0 \u00e0 votre serveur, vous devez ajouter le fournisseur JACC tiers qui ne fait pas partie du profil Open Liberty.
