--- a/dev/com.ibm.websphere.appserver.features/visibility/public/appAuthorization-2.0/resources/l10n/io.openliberty.appAuthorization-2.0_it.properties
+++ b/dev/com.ibm.websphere.appserver.features/visibility/public/appAuthorization-2.0/resources/l10n/io.openliberty.appAuthorization-2.0_it.properties
@@ -14,6 +14,4 @@
 #NLS_MESSAGEFORMAT_NONE
 #
 
-description=This feature enables support for Jakarta Authorization Contract for Containers (JACC) version 2.0 \
- In order to add the jacc-2.0 feature to your server, you need to add the third party JACC provider which is \
- not a part of the Open Liberty profile.
+description=Questa funzione abilita il supporto per JAAC (Jakarta Authorization Contract for Containers) versione 2.0 Per aggiungere la funzione appAuthorization-2.0 al server, \u00e8 necessario aggiungere il provider JAAC di terze parti che non fa parte del profilo Open Liberty.
