--- a/dev/com.ibm.websphere.appserver.features/visibility/public/appAuthorization-2.0/resources/l10n/io.openliberty.appAuthorization-2.0.properties
+++ b/dev/com.ibm.websphere.appserver.features/visibility/public/appAuthorization-2.0/resources/l10n/io.openliberty.appAuthorization-2.0.properties
@@ -14,4 +14,6 @@
 #NLS_MESSAGEFORMAT_NONE
 #
 
-description=Ten sk\u0142adnik umo\u017cliwia obs\u0142ug\u0119 specyfikacji Jakarta Authorization Contract for Containers (JACC) w wersji 2.0. Aby doda\u0107 ten sk\u0142adnik jacc-2.0 do serwera, nale\u017cy doda\u0107 dostawc\u0119 JACC innej firmy, kt\u00f3ry nie stanowi cz\u0119\u015bci profilu Open Liberty.
+description=This feature enables support for Jakarta Authorization Contract for Containers (JACC) version 2.0 \
+ In order to add the appAuthorization-2.0 feature to your server, you need to add the third party JACC provider which is \
+ not a part of the Open Liberty profile.
