--- a/dev/com.ibm.websphere.appserver.features/visibility/public/appAuthorization-2.0/resources/l10n/io.openliberty.appAuthorization-2.0_de.properties
+++ b/dev/com.ibm.websphere.appserver.features/visibility/public/appAuthorization-2.0/resources/l10n/io.openliberty.appAuthorization-2.0_de.properties
@@ -14,4 +14,4 @@
 #NLS_MESSAGEFORMAT_NONE
 #
 
-description=\uc774 \uae30\ub2a5\uc740 JACC(Jakarta Authorization Contract for Containers) \ubc84\uc804 2.0\uc5d0 \ub300\ud55c \uc9c0\uc6d0\uc744 \uac00\ub2a5\ud558\uac8c \ud569\ub2c8\ub2e4. jacc-2.0 \uae30\ub2a5\uc744 \uc11c\ubc84\uc5d0 \ucd94\uac00\ud558\ub824\uba74 Open Liberty \ud504\ub85c\ud30c\uc77c\uc758 \uc77c\ubd80\uac00 \uc544\ub2cc \uc368\ub4dc\ud30c\ud2f0 JACC \uc81c\uacf5\uc790\ub97c \ucd94\uac00\ud574\uc57c \ud569\ub2c8\ub2e4.
+description=Dieses Feature aktiviert die Unterst\u00fctzung f\u00fcr Jakarta Authorization Contract for Containers (JACC) Version 2.0. Wenn Sie Ihrem Server das Feature appAuthorization-2.0 hinzuf\u00fcgen m\u00f6chten, m\u00fcssen Sie den JACC-Provider eines anderen Anbieters, der nicht Teil des Open Liberty-Profils ist, hinzuf\u00fcgen.
