--- a/dev/com.ibm.websphere.appserver.features/visibility/public/appAuthorization-2.0/resources/l10n/io.openliberty.appAuthorization-2.0_ko.properties
+++ b/dev/com.ibm.websphere.appserver.features/visibility/public/appAuthorization-2.0/resources/l10n/io.openliberty.appAuthorization-2.0_ko.properties
@@ -14,4 +14,4 @@
 #NLS_MESSAGEFORMAT_NONE
 #
 
-description=\u6b64\u529f\u80fd\u90e8\u4ef6\u542f\u7528\u5bf9 Jakarta Authorization Contract for Containers (JACC) V2.0 \u7684\u652f\u6301\u3002\u4e3a\u5c06 jacc-2.0 \u529f\u80fd\u90e8\u4ef6\u6dfb\u52a0\u81f3\u670d\u52a1\u5668\uff0c\u9700\u8981\u6dfb\u52a0\u7b2c\u4e09\u65b9 JACC \u63d0\u4f9b\u7a0b\u5e8f\uff0c\u8be5\u63d0\u4f9b\u7a0b\u5e8f\u4e0d\u662f Open Liberty \u6982\u8981\u6587\u4ef6\u7684\u4e00\u90e8\u5206\u3002
+description=\uc774 \uae30\ub2a5\uc740 JACC(Jakarta Authorization Contract for Containers) \ubc84\uc804 2.0\uc5d0 \ub300\ud55c \uc9c0\uc6d0\uc744 \uac00\ub2a5\ud558\uac8c \ud569\ub2c8\ub2e4. appAuthorization-2.0 \uae30\ub2a5\uc744 \uc11c\ubc84\uc5d0 \ucd94\uac00\ud558\ub824\uba74 Open Liberty \ud504\ub85c\ud30c\uc77c\uc758 \uc77c\ubd80\uac00 \uc544\ub2cc \uc368\ub4dc\ud30c\ud2f0 JACC \uc81c\uacf5\uc790\ub97c \ucd94\uac00\ud574\uc57c \ud569\ub2c8\ub2e4.
