--- a/dev/com.ibm.websphere.appserver.features/visibility/public/appAuthorization-2.0/resources/l10n/io.openliberty.appAuthorization-2.0_pt_BR.properties
+++ b/dev/com.ibm.websphere.appserver.features/visibility/public/appAuthorization-2.0/resources/l10n/io.openliberty.appAuthorization-2.0_pt_BR.properties
@@ -14,4 +14,4 @@
 #NLS_MESSAGEFORMAT_NONE
 #
 
-description=Este recurso oferece suporte para o Jakarta Authorization Contract for Containers (JACC) vers\u00e3o 2.0. Para incluir o recurso jacc-2.0 em um servidor, \u00e9 necess\u00e1rio incluir o provedor JACC de terceiros, que n\u00e3o faz parte do perfil do Open Liberty.
+description=Este recurso oferece suporte para o Jakarta Authorization Contract for Containers (JACC) vers\u00e3o 2.0. Para incluir o recurso appAuthorization-2.0 em um servidor, \u00e9 necess\u00e1rio incluir o provedor JACC de terceiros, que n\u00e3o faz parte do perfil do Open Liberty.
