--- a/dev/com.ibm.websphere.appserver.features/visibility/public/appAuthorization-2.0/resources/l10n/io.openliberty.appAuthorization-2.0_ro.properties
+++ b/dev/com.ibm.websphere.appserver.features/visibility/public/appAuthorization-2.0/resources/l10n/io.openliberty.appAuthorization-2.0_ro.properties
@@ -14,4 +14,4 @@
 #NLS_MESSAGEFORMAT_NONE
 #
 
-description=\u9019\u9805\u7279\u6027\u53ef\u652f\u63f4 Jakarta Authorization Contract for Containers (JACC) 2.0 \u7248\u3002\u70ba\u5c07 jacc-2.0 \u7279\u6027\u65b0\u589e\u81f3\u4f3a\u670d\u5668\uff0c\u60a8\u9700\u8981\u65b0\u589e\u4e0d\u5c6c\u65bc Open Liberty \u8a2d\u5b9a\u6a94\u7684\u5354\u529b\u5ee0\u5546 JACC \u63d0\u4f9b\u8005\u3002
+description=Aceast\u0103 caracteristic\u0103 permite suportul pentru JACC (Jakarta Authorization Contract for Containers) versiunea 2.0. Pentru a ad\u0103uga caracteristica appAuthorization-2.0 la serverul dumneavoastr\u0103, trebuie s\u0103 ad\u0103uga\u0163i furnizorul JACC ter\u0163\u0103 parte care nu este parte a profilului Open Liberty.
