--- a/dev/com.ibm.websphere.appserver.features/visibility/public/appAuthorization-2.0/resources/l10n/io.openliberty.appAuthorization-2.0_zh.properties
+++ b/dev/com.ibm.websphere.appserver.features/visibility/public/appAuthorization-2.0/resources/l10n/io.openliberty.appAuthorization-2.0_zh.properties
@@ -14,4 +14,4 @@
 #NLS_MESSAGEFORMAT_NONE
 #
 
-description=Dieses Feature aktiviert die Unterst\u00fctzung f\u00fcr Jakarta Authorization Contract for Containers (JACC) Version 2.0. Wenn Sie Ihrem Server das Feature jacc-2.0 hinzuf\u00fcgen m\u00f6chten, m\u00fcssen Sie den JACC-Provider eines anderen Anbieters, der nicht Teil des Open Liberty-Profils ist, hinzuf\u00fcgen.
+description=\u6b64\u529f\u80fd\u90e8\u4ef6\u542f\u7528\u5bf9 Jakarta Authorization Contract for Containers (JACC) V2.0 \u7684\u652f\u6301\u3002\u4e3a\u5c06 appAuthorization-2.0 \u529f\u80fd\u90e8\u4ef6\u6dfb\u52a0\u81f3\u670d\u52a1\u5668\uff0c\u9700\u8981\u6dfb\u52a0\u7b2c\u4e09\u65b9 JACC \u63d0\u4f9b\u7a0b\u5e8f\uff0c\u8be5\u63d0\u4f9b\u7a0b\u5e8f\u4e0d\u662f Open Liberty \u6982\u8981\u6587\u4ef6\u7684\u4e00\u90e8\u5206\u3002
