Suggested edit from ID

--- a/dev/com.ibm.ws.transaction/resources/OSGI-INF/l10n/metatype.properties
+++ b/dev/com.ibm.ws.transaction/resources/OSGI-INF/l10n/metatype.properties
@@ -89,4 +89,4 @@ lease.length=Lease length
 lease.length.desc=The length of time before a recovery log lease expires
 
 lease.renewal.time=Lease Renewal Time
-lease.renewal.time.desc=The percentage of the lease length after which the lease is renewed
+lease.renewal.time.desc=The percentage of the duration of the recovery log lease that passes before the lease is renewed
