Add capability to map sqlCodes and sqlStates to stale connections

--- a/dev/com.ibm.ws.jdbc.metatype/resources/OSGI-INF/l10n/metatype.properties
+++ b/dev/com.ibm.ws.jdbc.metatype/resources/OSGI-INF/l10n/metatype.properties
@@ -106,6 +106,17 @@ isoLevel.SERIALIZABLE.desc=Dirty reads, non-repeatable reads and phantom reads a
 isoLevel.SNAPSHOT.desc=Snapshot isolation for Microsoft SQL Server JDBC Driver and DataDirect Connect for JDBC driver.
 isoLevel.NONE.desc=Indicates that the JDBC driver does not support transactions.
 
+# Map Error
+mapError=Map error
+mapError.desc=Map a specific sqlCode or sqlState to an action such as a stale connection.
+
+mapError.sqlState=SQL State
+mapError.sqlState.desc=A string that follows either the XOPEN SQLstate conventions or the SQL:2003 conventions. Mutually exclusive with the sqlCode attribute.
+mapError.sqlCode=SQL Code
+mapError.sqlCode.desc=An integer error code specific to the backend database. Normally this will be the actual error code returned by the underlying database. Mutually exclusive with the sqlState attribute.
+mapError.to=Map error to
+mapError.to.desc=The target mapping for the sqlCode or sqlState. Allowed values are: NONE (removes a mapping), or STALE_CONNECTION (connections that are determined to be stale will be evicted from the connection pool once closed)
+
 onConnect=On connect
 onConnect.desc=SQL command to execute once on each new connection that is established to the database. The SQL statement applies only to newly created connections, not to existing connections that are reused from the connection pool. If updated while the server is running, existing connections are destroyed.
 
