remove ejb trademark from nls files

--- a/dev/com.ibm.websphere.appserver.features/visibility/public/enterpriseBeansLite-4.0/resources/l10n/io.openliberty.enterpriseBeansLite-4.0_de.properties
+++ b/dev/com.ibm.websphere.appserver.features/visibility/public/enterpriseBeansLite-4.0/resources/l10n/io.openliberty.enterpriseBeansLite-4.0_de.properties
@@ -14,4 +14,4 @@
 #NLS_MESSAGEFORMAT_NONE
 #
 
-description=Dieses Feature aktiviert die Unterst\u00fctzung f\u00fcr Jakarta Enterprise Beans, die im EJB-Lite-Subset der Spezifikation Jakarta Enterprise Beans 4.0 geschrieben sind.
+description=Dieses Feature aktiviert die Unterst\u00fctzung f\u00fcr Jakarta Enterprise Beans, die im Enterprise Beans Lite-Subset der Spezifikation Jakarta Enterprise Beans 4.0 geschrieben sind.
