Add authFilterRef support

--- a/dev/com.ibm.ws.security.jwtsso/resources/OSGI-INF/l10n/metatype.properties
+++ b/dev/com.ibm.ws.security.jwtsso/resources/OSGI-INF/l10n/metatype.properties
@@ -38,3 +38,7 @@ setCookieSecureFlag.desc=Set the secure flag on the JWT cookie to send it only o
 
 disableJwtCookie=Disable JWT cookie
 disableJwtCookie.desc=Do not create the JWT cookie.
+
+authFilterRef=Authentication Filter Reference
+authFilterRef$Ref=Authentication filter reference
+authFilterRef.desc=Specifies the authentication filter reference.
