--- a/dev/com.ibm.ws.app.manager/resources/OSGI-INF/l10n/metatype.properties
+++ b/dev/com.ibm.ws.app.manager/resources/OSGI-INF/l10n/metatype.properties
@@ -81,3 +81,6 @@ appmgmt.startAfter.desc=Specifies applications that are required to start before
 
 classloader.name=Classloader
 classloader.desc=Defines the settings for an application classloader.
+
+appmgmt.expandLocation=Expand location
+appmgmt.expandLocation.desc=The expandLocation attribute enables a user to set the location where the autoExpanded application is located. The default location is ${server.config.dir}/apps/expanded/.
