--- a/dev/com.ibm.ws.webcontainer/resources/OSGI-INF/l10n/metatype.properties
+++ b/dev/com.ibm.ws.webcontainer/resources/OSGI-INF/l10n/metatype.properties
@@ -177,3 +177,6 @@ stopAppStartUponListenerException.desc=Some web applications depend on context l
 
 redirectToRelativeUrl.name=Send redirect response to a relative URL location
 redirectToRelativeUrl.desc=Send redirect response to a relative URL location without processing it. Set this property to true to send redirect response without converting the URL to an absolute location. 
+
+addStrictTransportSecurityHeader.name=Add the HTTP Strict Transport Security header for HTTPS responses
+addStrictTransportSecurityHeader.desc=Enables the HTTP Strict Transport Security (HSTS) header for HTTPS responses and allows a value for that header to be set. For example: "max-age=31536000;includeSubDomains". HSTS can also be configured in the web.xml via the "com.ibm.ws.webcontainer.ADD_STS_HEADER_WEBAPP" context-param.
