add allowQueryParamWithNoEqual to metatype.xml

--- a/dev/com.ibm.ws.webcontainer/resources/OSGI-INF/l10n/metatype.properties
+++ b/dev/com.ibm.ws.webcontainer/resources/OSGI-INF/l10n/metatype.properties
@@ -180,3 +180,6 @@ redirectToRelativeUrl.desc=Send redirect response to a relative URL location wit
 
 addStrictTransportSecurityHeader.name=Add the HTTP strict transport security header
 addStrictTransportSecurityHeader.desc=Enables the HTTP Strict Transport Security (HSTS) header for HTTPS responses and allows a value to be set for that header, for example: "max-age=31536000;includeSubDomains". HSTS can also be configured in the web.xml file by setting the "com.ibm.ws.webcontainer.ADD_STS_HEADER_WEBAPP" context parameter.
+
+allowQueryParamWithNoEqual.name=Allow query parameters with no value
+allowQueryParamWithNoEqual.desc=If the query parameter in a URL contains only the string name instead of the expected name=value format, the server by default returns the value of request.getParameter(name) query as null.  When this property is set to true, if the query parameter in a URL contains only the string name, the server returns an empty string as the value for the request.getParameter(name) query.
