Issue #14762 address code review comments from ID reviewer

--- a/dev/com.ibm.ws.jca.cm/resources/OSGI-INF/l10n/metatype.properties
+++ b/dev/com.ibm.ws.jca.cm/resources/OSGI-INF/l10n/metatype.properties
@@ -52,7 +52,7 @@ reapTime.desc=Amount of time between runs of the pool maintenance thread. A valu
 # Connection Manager advanced properties
 
 autoCloseCon=Automatically close connections
-autoCloseCon.desc=Attempts to clean up after applications that leave connections open across the end of a servlet request, enterprise bean instance, managed executor task, contextual task, or managed completion stage. When an unsharable connection is obtained within one of these application artifacts and remains open when it ends, the container attempts to close the connection handle. The container may also close sharable connections that do not support DissociatableManagedConnection. It is recommended that applications always close connections rather than relying on the container, even when this option is enabled.
+autoCloseCon.desc=Attempts to clean up after applications that leave connections open after the end of a servlet request, enterprise bean instance, managed executor task, contextual task, or managed completion stage. When an unsharable connection is obtained within one of these application artifacts and remains open when it ends, the container attempts to close the connection handle. The container may also close sharable connections that do not support DissociatableManagedConnection. Applications should always follow the programming model defined by the specification and close connections at the appropriate times rather than relying on the container, even when this option is enabled.
 
 maxConPerThd=Maximum open connections per thread
 maxConPerThd.desc=Limits the number of open connections on each thread.
