Initial impl of enableThreadDumps for RequestTiming

--- a/dev/com.ibm.ws.request.timing.jdbc/resources/OSGI-INF/l10n/metatype.properties
+++ b/dev/com.ibm.ws.request.timing.jdbc/resources/OSGI-INF/l10n/metatype.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2019 IBM Corporation and others.
+# Copyright (c) 2019, 2021 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -27,6 +27,9 @@ slowRequestThreshold.desc=Duration of time that a JDBC request can run before be
 
 hungRequestThreshold.name=Hung request threshold
 hungRequestThreshold.desc=Duration of time that a JDBC request can run before being considered hung.
+
+enableThreadDumps=Enable thread dumps
+enableThreadDumps.desc=Indicates whether thread dumps are created when a hung request is detected. When this value is set to true (default), thread dumps are created. When set to false, thread dumps are not created.
 
 interruptHungRequest.name=Interrupt hung requests
 interruptHungRequest.desc=Indicates whether a JDBC request that is hung is to be interrupted. A value of true causes the requestTiming-1.0 feature to attempt to interrupt the hung request. A value of false allows the request to continue to run.
