--- a/dev/com.ibm.ws.request.timing/resources/OSGI-INF/l10n/metatype.properties
+++ b/dev/com.ibm.ws.request.timing/resources/OSGI-INF/l10n/metatype.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2019 IBM Corporation and others.
+# Copyright (c) 2019, 2021 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -21,6 +21,9 @@ slowRequestThreshold.desc=Duration of time that a request can run before being c
 
 hungRequestThreshold=Hung request threshold
 hungRequestThreshold.desc=Duration of time that a request can run before being considered hung.
+
+enableThreadDumps=Enable thread dumps
+enableThreadDumps.desc=Indicates whether thread dumps are created when a hung request is detected. When this value is set to true (default), thread dumps are created. When set to false, thread dumps are not created.
 
 sampleRate=Sampling rate
 sampleRate.desc=Rate at which the sampling should happen for the slow request tracking.  To sample one out of every n requests, set sampleRate to n.  To sample all requests, set sampleRate to 1.
