improve metatype desc for channel address*List props

--- a/dev/com.ibm.ws.channelfw/resources/OSGI-INF/l10n/metatype.properties
+++ b/dev/com.ibm.ws.channelfw/resources/OSGI-INF/l10n/metatype.properties
@@ -45,10 +45,10 @@ inactivityTimeout=Inactivity timeout
 inactivityTimeout.desc=Amount of time to wait for a read or write request to complete on a socket. This value is overridden by protocol-specific timeouts.
 
 tcp.addressIncludeList=Address include list
-tcp.addressIncludeList.desc=A comma-separated list of addresses that are allowed to make inbound connections on this endpoint. You can specify IPv4 or IPv6 addresses. All values in an IPv4 or IPv6 address must be represented by a number or by an asterisk wildcard character.
+tcp.addressIncludeList.desc=A comma-separated list of addresses that are allowed to make inbound connections on this endpoint. You can specify IPv4 or IPv6 addresses. All values in an IPv4 or IPv6 address must be represented by a number or by an asterisk wildcard character. As examples, valid IPv4 addresses for this list include "*.1.255.0", "254.*.*.9", and "1.*.*.*", and valid IPv6 addresses include "0:*:*:0:007F:0:0001:0001", "F:FF:FFF:FFFF:1:01:001:0001", and "1234:*:4321:*:9F9f:*:*:0000".
 
 tcp.addressExcludeList=Address exclude list
-tcp.addressExcludeList.desc=A comma-separated list of addresses that are not allowed to make inbound connections on this endpoint. You can specify IPv4 or IPv6 addresses. All values in an IPv4 or IPv6 address must be represented by a number or by an asterisk wildcard character. 
+tcp.addressExcludeList.desc=A comma-separated list of addresses that are not allowed to make inbound connections on this endpoint. You can specify IPv4 or IPv6 addresses. All values in an IPv4 or IPv6 address must be represented by a number or by an asterisk wildcard character. As examples, valid IPv4 addresses for this list include "*.1.255.0", "254.*.*.9", and "1.*.*.*", and valid IPv6 addresses include "0:*:*:0:007F:0:0001:0001", "F:FF:FFF:FFFF:1:01:001:0001", and "1234:*:4321:*:9F9f:*:*:0000".
 
 tcp.hostNameIncludeList=Host name include list
 tcp.hostNameIncludeList.desc=A comma-separated list of host names that are allowed to make inbound connections on this endpoint. Host names are not case-sensitive and can start with an asterisk, which is used as a wildcard character. However, asterisks cannot be elsewhere in the host name. For example, *.abc.com is valid, but *.abc.* is not valid. 
