--- a/dev/com.ibm.websphere.appserver.features/visibility/public/ldapRegistry-3.0/resources/l10n/com.ibm.websphere.appserver.ldapRegistry-3.0.properties
+++ b/dev/com.ibm.websphere.appserver.features/visibility/public/ldapRegistry-3.0/resources/l10n/com.ibm.websphere.appserver.ldapRegistry-3.0.properties
@@ -15,5 +15,5 @@
 #
 
 description=This feature enables support for using  an LDAP server as a user registry. Any server \
- that supports LDAP Version 3.0 may be used.  Multiple LDAP registries can be configured, and then \
- federated to achieve a single logical registry view. 
+ that supports LDAP Version 3.0 can be used. Multiple LDAP user registries can be configured and then \
+ federated to achieve a single logical user registry view. 
