Message review comments

--- a/dev/com.ibm.ws.jdbc.metatype/resources/OSGI-INF/l10n/metatype.properties
+++ b/dev/com.ibm.ws.jdbc.metatype/resources/OSGI-INF/l10n/metatype.properties
@@ -113,9 +113,9 @@ identifyException.desc=Map a specific sqlCode or sqlState to an action such as a
 identifyException.sqlState=SQL State
 identifyException.sqlState.desc=A string that follows either the XOPEN SQLstate conventions or the SQL:2003 conventions.
 identifyException.errorCode=SQL Error Code
-identifyException.errorCode.desc=An integer error code specific to the backend database. Normally this will be the actual error code returned by the underlying database.
+identifyException.errorCode.desc=An integer error code specific to the backend database. Normally, this is the actual error code that is returned by the underlying database.
 identifyException.as=Identify exception as
-identifyException.as.desc=The target mapping for the sqlCode or sqlState. Allowed values are: None (removes a mapping), or StaleConnection (connections that are determined to be stale will be evicted from the connection pool once closed)
+identifyException.as.desc=The target mapping for the sqlCode or sqlState. Allowed values are: None or StaleConnection. None removes a mapping. StaleConnection causes connections that are stale to be evicted from the connection pool once they are closed.
 
 onConnect=On connect
 onConnect.desc=SQL command to execute once on each new connection that is established to the database. The SQL statement applies only to newly created connections, not to existing connections that are reused from the connection pool. If updated while the server is running, existing connections are destroyed.
