Allow identifyException to specify an errorCode and sqlState at the same time

--- a/dev/com.ibm.ws.jdbc.metatype/resources/OSGI-INF/l10n/metatype.properties
+++ b/dev/com.ibm.ws.jdbc.metatype/resources/OSGI-INF/l10n/metatype.properties
@@ -107,8 +107,8 @@ isoLevel.SNAPSHOT.desc=Snapshot isolation for Microsoft SQL Server JDBC Driver a
 isoLevel.NONE.desc=Indicates that the JDBC driver does not support transactions.
 
 # Identify Exception
-identifyException=Identify exception as
-identifyException.desc=Map a specific sqlCode or sqlState to an action such as a stale connection.
+identifyException=Identify exception
+identifyException.desc=Identify a specific SQL error code or SQL state on a SQLException.
 
 identifyException.sqlState=SQL State
 identifyException.sqlState.desc=A string that follows either the XOPEN SQLstate conventions or the SQL:2003 conventions.
