Review comments from Nathan

--- a/dev/com.ibm.ws.jdbc.metatype/resources/OSGI-INF/l10n/metatype.properties
+++ b/dev/com.ibm.ws.jdbc.metatype/resources/OSGI-INF/l10n/metatype.properties
@@ -107,15 +107,15 @@ isoLevel.SNAPSHOT.desc=Snapshot isolation for Microsoft SQL Server JDBC Driver a
 isoLevel.NONE.desc=Indicates that the JDBC driver does not support transactions.
 
 # Identify Exception
-identifyException=Identify exception
-identifyException.desc=Identify a specific SQL error code or SQL state on a SQLException.
+identifyException=Identify Exception
+identifyException.desc=Identify a specific SQL error code or SQL state on a SQLException. This enables the server to take appropriate action based on the error condition. For example, closing a stale connection instead of returning it to the connection pool.
 
-identifyException.sqlState=SQL State
-identifyException.sqlState.desc=A string that follows either the XOPEN SQLstate conventions or the SQL:2003 conventions.
-identifyException.errorCode=SQL Error Code
-identifyException.errorCode.desc=An integer error code specific to the backend database. Normally, this is the actual error code that is returned by the underlying database.
+identifyException.sqlState=SQL state
+identifyException.sqlState.desc=A string that follows either the XOPEN SQL state conventions or the SQL:2003 conventions.
+identifyException.errorCode=SQL error code
+identifyException.errorCode.desc=An error code specific to the backend database. Normally, this is the actual error code that is returned by the underlying database.
 identifyException.as=Identify exception as
-identifyException.as.desc=The target mapping for the sqlCode or sqlState. Allowed values are: None or StaleConnection. None removes a mapping. StaleConnection causes connections that are stale to be evicted from the connection pool once they are closed.
+identifyException.as.desc=Identifies the error condition that the SQL error code or SQL state represents. Allowed values are: None or StaleConnection. None removes a mapping. StaleConnection causes connections that are stale to be evicted from the connection pool once they are closed.
 
 onConnect=On connect
 onConnect.desc=SQL command to execute once on each new connection that is established to the database. The SQL statement applies only to newly created connections, not to existing connections that are reused from the connection pool. If updated while the server is running, existing connections are destroyed.
