change audit keystore to a pid Message file update copyright

--- a/dev/com.ibm.ws.security.audit.file/resources/OSGI-INF/l10n/metatype.properties
+++ b/dev/com.ibm.ws.security.audit.file/resources/OSGI-INF/l10n/metatype.properties
@@ -37,15 +37,17 @@ encrypt.name=Encrypt the audit records in the audit file log
 encrypt.desc=Indicates whether the audit records in the audit file log will be encrypted.  Default behavior is to not encrypt the audit records.
 
 encryptAlias.name=Alias name of certificate for encrypting
-encryptAlias.desc=Alias name of the certificate used to encrypt the audit records.
+encryptAlias.desc=Alias name of the certificate that is used to encrypt the audit records.
 
-encryptKeyStoreRef.name=Audit encryption keystore reference 
+encryptKeyStoreRef.name=Audit Encryption Keystore Reference 
+encryptKeyStoreRef.name$Ref=Audit encryption keystore reference
 encryptKeyStoreRef.desc=Location of the keystore containing the certificate used to encrypt the audit records.
 
 signingAlias.name=Alias name of personal certificate for signing
-signingAlias.desc=Alias name of the personal certificate used to sign the audit records.
+signingAlias.desc=Alias name of the personal certificate that is used to sign the audit records.
 
-signingKeyStoreRef.name=Audit signing keystore location 
+signingKeyStoreRef.name=Audit Signing Keystore Location 
+signingKeyStoreRef.name$Ref=Audit signing keystore location 
 signingKeyStoreRef.desc=Location of keystore that contains the personal certificate that is used to sign the audit records.
 
 compact.name=Compact json record format
