--- a/dev/com.ibm.ws.security.wim.adapter.ldap/resources/OSGI-INF/l10n/metatype.properties
+++ b/dev/com.ibm.ws.security.wim.adapter.ldap/resources/OSGI-INF/l10n/metatype.properties
@@ -1,6 +1,6 @@
 
 ###############################################################################
-# Copyright (c) 2011, 2020 IBM Corporation and others.
+# Copyright (c) 2011, 2021 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -451,3 +451,16 @@ contextPoolConfig=Context Pool Properties
 contextPoolConfig.desc=Properties of the context pool.
 
 contextPoolConfig$Ref=Context pool properties reference
+
+bindAuthMechanism=Bind Authentication Mechanism
+bindAuthMechanism.desc=The authentication mechanism for binding to the LDAP server when searching or modifying an LDAP entry.
+
+bindAuthMechanism.none=Anonymous bind to the directory service. No additional login attributes are required.
+bindAuthMechanism.simple=Use the bindDN and bindPassword to bind to the directory service. The bindDN and bindPassword attributes are required.
+bindAuthMechanism.GSSAPI=GSS-API Kerberos v5 (krb5) support to bind to the directory service. The krb5Principal attribute is required
+
+krb5Principal=Kerberos principal name
+krb5Principal.desc=The name of the Kerberos principal name or Kerberos service name to be used.
+
+krb5TicketCache=Kerberos ticket cache
+krb5TicketCache.desc=The file location where Kerberos credentials for the Kerberos principal name or service name will be stored. Also known as the Kerberos credential cache (ccache)
