--- a/dev/com.ibm.ws.security.openidconnect.client/resources/OSGI-INF/l10n/metatype.properties
+++ b/dev/com.ibm.ws.security.openidconnect.client/resources/OSGI-INF/l10n/metatype.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2013, 2020 IBM Corporation and others.
+# Copyright (c) 2013, 2021 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -36,7 +36,7 @@ issuerIdentifier=Issuer identifier
 issuerIdentifier.desc=A case-sensitive URL using the HTTPS scheme that contains scheme, host and optionally port number and path components. Specify multiple values as a comma separated list.
 
 userIdentityToCreateSubject=User identity use to create a subject
-userIdentityToCreateSubject.desc=Specifies a user identity in the ID token used to create the user subject.
+userIdentityToCreateSubject.desc=Specifies a JSON attribute in the ID token that is used as the user principal name in the subject. If no value is specified, the JSON attribute "sub" is used. The value for this property is overridden by the value for userIdentifier, if specified.
 
 mapIdentityToRegistryUser=Map identity to registry user
 mapIdentityToRegistryUser.desc=Specifies whether to map the identity to a registry user. If this is set to false, then the user registry is not used to create the user subject.
@@ -227,7 +227,7 @@ jwkParameter=Custom Parameters For JWK Endpoint
 jwkParameter.desc=Specifies custom parameters to send to JWK endpoint of the OpenID Connect provider.
 
 allowCustomCacheKey=Allow custom cache key
-allowCustomCacheKey.desc=Specifies if a custom cache key is used to store users in an authentication cache. Set this to false when using the jwtsso feature to allow the security subject to be constructed directly from the jwtsso cookie.  The default value is true.
+allowCustomCacheKey.desc=Specifies if a custom cache key is used to store users in an authentication cache. If set to true, the security subject can be constructed directly from the user registry. If the security subject is constructed from the user registry, there will be no SSO components on the subject. Set this to false when using the jwtsso feature to allow the security subject to be constructed directly from the jwtsso cookie.
 
 oidcClientCustomRequestParam=Custom Parameters To Include In Requests
 oidcClientCustomRequestParam.desc=Specifies additional parameters to include in the requests to send to the provider.
