add description from KC

--- a/dev/com.ibm.ws.transport.http/resources/OSGI-INF/l10n/metatype.properties
+++ b/dev/com.ibm.ws.transport.http/resources/OSGI-INF/l10n/metatype.properties
@@ -16,8 +16,8 @@
 #
 
 onError.name=On error
-onError.desc=Action to take after a failure to start an endpoint. 
-onError.warn=The server will issue warning and error messages if it fails to start an endpoint. 
+onError.desc=Action to take after a failure to start an endpoint.
+onError.warn=The server will issue warning and error messages if it fails to start an endpoint.
 onError.fail=The server will issue warning and error messages if it fails to start an endpoint and then will stop.
 onError.ignore=The server will not issue any warning or error messages when an endpoint fails to start.
 
@@ -60,9 +60,9 @@ endpoint.protocolVersion.desc=When Servlet 4.0 API is enabled as a feature, set 
 
 endpoint.tcpOptions=TCP Options
 endpoint.tcpOptions$Ref=TCP options reference
-endpoint.tcpOptions.desc=TCP protocol options for the endpoint. 
+endpoint.tcpOptions.desc=TCP protocol options for the endpoint.
 
-endpoint.sslOptions=SSL Options 
+endpoint.sslOptions=SSL Options
 endpoint.sslOptions$Ref=SSL options reference
 endpoint.sslOptions.desc=SSL protocol options for the endpoint.
 
@@ -105,22 +105,22 @@ http.options=HTTP Options
 http.options.desc=HTTP protocol configuration.
 
 http.keepAlive=Enable persistent connections
-http.keepAlive.desc=Enables persistent connections (HTTP keepalive). If true, connections are kept alive for reuse by multiple sequential requests and responses. If false, connections are closed after the response is sent.    
+http.keepAlive.desc=Enables persistent connections (HTTP keepalive). If true, connections are kept alive for reuse by multiple sequential requests and responses. If false, connections are closed after the response is sent.
 
 http.maxKeepAliveRequests=Maximum persistent requests per connection
-http.maxKeepAliveRequests.desc=Maximum number of persistent requests that are allowed on a single HTTP connection if persistent connections are enabled. A value of -1 means unlimited.  
+http.maxKeepAliveRequests.desc=Maximum number of persistent requests that are allowed on a single HTTP connection if persistent connections are enabled. A value of -1 means unlimited. This option supports low latency or high throughput applications, and SSL connections for use in situations where building up a new connection can be costly.  
 
 http.noCacheCookiesControl=No cache cookies control
 http.noCacheCookiesControl.desc=Allows the user to control whether or not the presence of a Set-Cookie header should update the Cache-Control header with a matching no-cache value. This also adds the Expires header.
 
 http.persistTimeout=Persistent connection timeout
-http.persistTimeout.desc=Amount of time that a socket will be allowed to remain idle between requests. This setting only applies if persistent connections are enabled. 
+http.persistTimeout.desc=Amount of time that a socket will be allowed to remain idle between requests. This setting only applies if persistent connections are enabled.
 
 http.readTimeout=Read timeout
-http.readTimeout.desc=Amount of time to wait for a read request to complete on a socket after the first read occurs. 
+http.readTimeout.desc=Amount of time to wait for a read request to complete on a socket after the first read occurs.
 
 http.writeTimeout=Write timeout
-http.writeTimeout.desc=Amount of time to wait on a socket for each portion of the response data to be transmitted. 
+http.writeTimeout.desc=Amount of time to wait on a socket for each portion of the response data to be transmitted.
 
 http.removeServerHeader=Remove server header
 http.removeServerHeader.desc=Removes server implementation information from HTTP headers.
@@ -156,7 +156,7 @@ log.access=HTTP Access Logging
 log.access.desc=HTTP access logs contain a record of all inbound HTTP client requests.
 
 log.access.enabled=Enabled
-log.access.enabled.desc=Enables access logging when the accessLogging configuration element is defined. Note: Access logging must be configured for this attribute to take effect.  
+log.access.enabled.desc=Enables access logging when the accessLogging configuration element is defined. Note: Access logging must be configured for this attribute to take effect.
 
 log.access.filePath=Log file path
 log.access.filePath.desc=Directory path and name of the access log file. Standard variable substitutions, such as ${server.output.dir}, can be used when specifying the directory path.
