--- a/dev/com.ibm.ws.jdbc.metatype/resources/OSGI-INF/l10n/metatype.properties
+++ b/dev/com.ibm.ws.jdbc.metatype/resources/OSGI-INF/l10n/metatype.properties
@@ -128,7 +128,7 @@ recoveryAuth$Ref=Recovery authentication data reference
 recoveryAuth.desc=Authentication data for transaction recovery.
 
 stmtCacheSz=Cached statements per connection
-stmtCacheSz.desc=Maximum number of cached statements per connection. If updated while the server is running, the statement cache is resized upon next use. To set this option, complete the following prerequisites: Review the application code (or an SQL trace that you gather from the database or database driver) for all unique prepared statements. Ensure that the cache size is larger than the number of statements.
+stmtCacheSz.desc=Maximum number of cached statements per connection. If updated while the server is running, the statement cache is resized upon next use. To set this option, complete the following prerequisites: Review either the application code or an SQL trace that you gather from the database or database driver for all unique prepared statements. Ensure that the cache size is larger than the number of statements.
 
 syncQryTx=Synchronize query and transaction timeouts
 syncQryTx.desc=Use the time remaining (if any) in a JTA transaction as the default query timeout for SQL statements.
