--- a/dev/com.ibm.ws.security.openidconnect.client/resources/OSGI-INF/l10n/metatype.properties
+++ b/dev/com.ibm.ws.security.openidconnect.client/resources/OSGI-INF/l10n/metatype.properties
@@ -227,7 +227,7 @@ jwkParameter=Custom Parameters For JWK Endpoint
 jwkParameter.desc=Specifies custom parameters to send to JWK endpoint of the OpenID Connect provider.
 
 allowCustomCacheKey=Allow custom cache key
-allowCustomCacheKey.desc=Specifies whether a custom cache key is used to store users in an authentication cache. If this property is set to true, the security subject can be constructed directly from the user registry. If the security subject is constructed from the user registry, there will be no SSO components on the subject. Set this property to false when you use the jwtSso feature to allow the security subject to be constructed directly from the jwtSso cookie.
+allowCustomCacheKey.desc=Specifies whether a custom cache key is used to store users in an authentication cache. If this property is set to true and the cache key for a user is not found in the authentication cache, the user will be required to log in again. Set this property to false when you use the jwtSso feature to allow the security subject to be constructed directly from the jwtSso cookie. Set this property to false when you do not use the jwtSso feature to allow the security subject to be constructed directly from the user registry. If the security subject is reconstructed from the user registry, there will be no SSO components in the subject. If your LTPA cookie is used by more than one server, consider setting this property to false. If your application always requires the SSO components to be present in the subject, you must either set this property to true or use the jwtSso feature.
 
 oidcClientCustomRequestParam=Custom Parameters To Include In Requests
 oidcClientCustomRequestParam.desc=Specifies additional parameters to include in the requests to send to the provider.
