Shorten metatype description to avoid validation failure.

--- a/dev/com.ibm.ws.jca.cm/resources/OSGI-INF/l10n/metatype.properties
+++ b/dev/com.ibm.ws.jca.cm/resources/OSGI-INF/l10n/metatype.properties
@@ -63,5 +63,5 @@ numConPerThd.desc=Caches the specified number of connections for each thread.
 enableSharing=Enable connection sharing for direct lookups
 enableSharing.desc=If set to true, connections are shared. If set to false, connections are unshared.
 
-enableContainerAuth=Enable container authentication for direct lookups
+enableContainerAuth=Enable container authentication on direct lookups
 enableContainerAuth.desc=If set to true, connections use container authentication. If set to false, connections use application authentication.
