Issue #16410: Validate that the userFilter and groupFilter contain an AVA with %v.

--- a/dev/com.ibm.ws.security.wim.adapter.ldap/resources/OSGI-INF/l10n/metatype.properties
+++ b/dev/com.ibm.ws.security.wim.adapter.ldap/resources/OSGI-INF/l10n/metatype.properties
@@ -114,10 +114,10 @@ failoverServer.port.desc=LDAP failover server port.
 #==== LDAP FILTER CONFIGURATION =====
 
 userFilter=User filter
-userFilter.desc=An LDAP filter clause for searching the user registry for users.
+userFilter.desc=An LDAP filter clause for searching the user registry for users. When defined, this filter requires an Attribute Value Assertion (AVA) containing a %v. For example, uid=%v. During searches, the %v in the AVA is replaced with the user or user pattern being searched for.  
 
 groupFilter=Group filter
-groupFilter.desc=An LDAP filter clause for searching the user registry for groups.
+groupFilter.desc=An LDAP filter clause for searching the user registry for groups. When defined, this filter requires an Attribute Value Assertion (AVA) containing a %v. For example, cn=%v. During searches, the %v in the AVA is replaced with the group or group pattern being searched for.
 
 userIdMap=User ID map
 userIdMap.desc=An LDAP filter that maps the name of a user to an LDAP entry.
