Fix up the checkpoint feature properties
Enable feature for parallel activate

--- a/dev/com.ibm.websphere.appserver.features/visibility/public/checkpoint-1.0/resources/l10n/io.openliberty.checkpoint-1.0.properties
+++ b/dev/com.ibm.websphere.appserver.features/visibility/public/checkpoint-1.0/resources/l10n/io.openliberty.checkpoint-1.0.properties
@@ -14,5 +14,4 @@
 #NLS_MESSAGEFORMAT_NONE
 #
 
-description=This feature enables support for Spring Boot applications using Spring Boot \
- version 1.5.x. 
+description=This feature enables support to checkpoint a Liberty server with CRIU on Linux. 
