Issue 17034: Add initial metatype for OIDC RP JWE support
Adds the `keyManagementKeyAlias` attribute to the OIDC client config.

Resolves #17034.

--- a/dev/com.ibm.ws.security.openidconnect.client/resources/OSGI-INF/l10n/metatype.properties
+++ b/dev/com.ibm.ws.security.openidconnect.client/resources/OSGI-INF/l10n/metatype.properties
@@ -250,3 +250,7 @@ forwardLoginParameter.desc=Specifies a comma-separated list of parameter names t
 
 clockSkew=Clock skew
 clockSkew.desc=Specifies the allowed clock skew in seconds when you validate the JSON Web Token.
+
+# Do not translate "Content Encryption Key", "JSON Web Encryption"
+keyManagementKeyAlias=Key management key alias
+keyManagementKeyAlias.desc=Private key alias of the key management key that is used to decrypt the Content Encryption Key of a JSON Web Encryption (JWE) token.
