--- a/dev/com.ibm.ws.webcontainer/resources/OSGI-INF/l10n/metatype.properties
+++ b/dev/com.ibm.ws.webcontainer/resources/OSGI-INF/l10n/metatype.properties
@@ -187,5 +187,5 @@ allowQueryParamWithNoEqual.desc=When this property is set to true, if the query 
 setHtmlContentTypeOnError.name=Disable text/html content type on error responses
 setHtmlContentTypeOnError.desc=When this property is false, the webcontainer will not set the response's content type header during the error handling process. An application is responsible to set the response's content type. The default value (true) sets the content type to "text/html".
 
-excludeAllHandledTypesClasses.name=Disable the return of HandlesTypes parameter classes
-excludeAllHandledTypesClasses.desc=When this property is true, ServletContainerInitializer implementors using the HandlesTypes annotation will not receive those classes directly specified as HandlesTypes parameters during startup. For servlet-5.0 and newer Servlet features, the default value is true.
+excludeAllHandledTypesClasses.name=Disable returning handlesTypes parameters
+excludeAllHandledTypesClasses.desc=When this property is true, ServletContainerInitializer implementors using the HandlesTypes annotation will not receive those classes which are specified as HandlesTypes parameters during startup. For servlet-5.0 and newer servlet features, the default value is true.
