--- a/dev/com.ibm.websphere.appserver.features/visibility/public/jwt-1.0/resources/l10n/com.ibm.websphere.appserver.jwt-1.0.properties
+++ b/dev/com.ibm.websphere.appserver.features/visibility/public/jwt-1.0/resources/l10n/com.ibm.websphere.appserver.jwt-1.0.properties
@@ -14,4 +14,4 @@
 #NLS_MESSAGEFORMAT_NONE
 #
 
-description=This feature allows runtime to create JWT tokens.
+description=This feature allows the runtime to create JWT tokens.
