Issue 16587: Update OIDC isClientSideRedirectSupported description
Resolves #16587

--- a/dev/com.ibm.ws.security.openidconnect.client/resources/OSGI-INF/l10n/metatype.properties
+++ b/dev/com.ibm.ws.security.openidconnect.client/resources/OSGI-INF/l10n/metatype.properties
@@ -129,7 +129,7 @@ createSession=Create session
 createSession.desc=Specifies whether to create an HttpSession if the current HttpSession does not exist.
 
 isClientSideRedirectSupported=Client side redirect
-isClientSideRedirectSupported.desc=Specifies whether the client supports redirect at client side.
+isClientSideRedirectSupported.desc=Set this property to false if you do not want to use JavaScript to redirect to the OpenID Connect Provider for the initial authentication request. If JavaScript is not used, any URI fragments that are present in the original inbound request are lost.
 
 disableLtpaCookie=Disable LTPA token
 disableLtpaCookie.desc=Do not create an LTPA Token during processing of the OAuth token. Create a cookie of the specific Service Provider instead.
