Remove 'Eclipse' from feature descriptions

--- a/dev/com.ibm.websphere.appserver.features/visibility/public/microProfile-4.1/resources/l10n/com.ibm.websphere.appserver.microProfile-4.1.properties
+++ b/dev/com.ibm.websphere.appserver.features/visibility/public/microProfile-4.1/resources/l10n/com.ibm.websphere.appserver.microProfile-4.1.properties
@@ -14,4 +14,4 @@
 #NLS_MESSAGEFORMAT_NONE
 #
 
-description=This feature combines the Liberty features that support Eclipse MicroProfile 4.1 for Cloud Native Java.
+description=This feature combines the Liberty features that support MicroProfile 4.1 for Cloud Native Java.
