--- a/dev/com.ibm.websphere.appserver.features/visibility/public/microProfile-5.0/resources/l10n/com.ibm.websphere.appserver.microProfile-5.0_pt_BR.properties
+++ b/dev/com.ibm.websphere.appserver.features/visibility/public/microProfile-5.0/resources/l10n/com.ibm.websphere.appserver.microProfile-5.0_pt_BR.properties
@@ -14,4 +14,4 @@
 #NLS_MESSAGEFORMAT_NONE
 #
 
-description=Este recurso combina os recursos do Liberty que oferecem suporte ao Eclipse MicroProfile 5.0 for Cloud Native Java.
+description=Este recurso combina os recursos do Liberty que oferecem suporte ao MicroProfile 5.0 for Cloud Native Java.
