--- a/dev/com.ibm.websphere.appserver.features/visibility/public/microProfile-4.1/resources/l10n/com.ibm.websphere.appserver.microProfile-4.1_cs.properties
+++ b/dev/com.ibm.websphere.appserver.features/visibility/public/microProfile-4.1/resources/l10n/com.ibm.websphere.appserver.microProfile-4.1_cs.properties
@@ -14,4 +14,4 @@
 #NLS_MESSAGEFORMAT_NONE
 #
 
-description=Tato funkce kombinuje funkce Liberty, kter\u00e9 podporuj\u00ed profil Eclipse MicroProfile 4.1 pro Cloud Native Java.
+description=Tato funkce kombinuje funkce Liberty, kter\u00e9 podporuj\u00ed profil MicroProfile 4.1 pro Cloud Native Java.
