--- a/dev/com.ibm.websphere.appserver.features/visibility/public/microProfile-4.1/resources/l10n/com.ibm.websphere.appserver.microProfile-4.1_de.properties
+++ b/dev/com.ibm.websphere.appserver.features/visibility/public/microProfile-4.1/resources/l10n/com.ibm.websphere.appserver.microProfile-4.1_de.properties
@@ -14,4 +14,4 @@
 #NLS_MESSAGEFORMAT_NONE
 #
 
-description=Dieses Feature ist eine Kombination der Liberty-Features, die Eclipse MicroProfile 4.1 f\u00fcr Cloud Native Java unterst\u00fctzen.
+description=Dieses Feature ist eine Kombination der Liberty-Features, die MicroProfile 4.1 f\u00fcr Cloud Native Java unterst\u00fctzen.
