--- a/dev/com.ibm.websphere.appserver.features/visibility/public/microProfile-4.1/resources/l10n/com.ibm.websphere.appserver.microProfile-4.1_es.properties
+++ b/dev/com.ibm.websphere.appserver.features/visibility/public/microProfile-4.1/resources/l10n/com.ibm.websphere.appserver.microProfile-4.1_es.properties
@@ -14,4 +14,4 @@
 #NLS_MESSAGEFORMAT_NONE
 #
 
-description=Esta caracter\u00edstica combina las caracter\u00edsticas de Liberty que soportan Eclipse MicroProfile 4.1 for Cloud Native Java.
+description=Esta caracter\u00edstica combina las caracter\u00edsticas de Liberty que soportan MicroProfile 4.1 for Cloud Native Java.
