--- a/dev/com.ibm.websphere.appserver.features/visibility/public/microProfile-5.0/resources/l10n/com.ibm.websphere.appserver.microProfile-5.0.properties
+++ b/dev/com.ibm.websphere.appserver.features/visibility/public/microProfile-5.0/resources/l10n/com.ibm.websphere.appserver.microProfile-5.0.properties
@@ -14,4 +14,4 @@
 #NLS_MESSAGEFORMAT_NONE
 #
 
-description=This feature combines the Liberty features that support Eclipse MicroProfile 5.0 for Cloud Native Java.
+description=This feature combines the Liberty features that support MicroProfile 5.0 for Cloud Native Java.
